--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="40sp"
+        android:textSize="50sp"
         android:textStyle="bold"
-        android:id="@+id/myRestaurantsTextView" />
+        android:id="@+id/myRestaurants" />
 
     <Button
         android:layout_width="match_parent"
@@ -47,6 +47,7 @@
         android:layout_above="@+id/findRestaurantButton"
         android:layout_marginBottom="10dp"
         android:padding="5dp"
+        android:textSize="15sp"
         android:hint="enter zip code"
         android:layout_centerHorizontal="true" />
 
